# KarbonV2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  build.sh
src/engine/: main.cpp
src/engine/core/: application.cpp  application.h  base.h  layer.h  window.cpp  window.h
src/engine/events/: application_event.h  event.h  key_event.h  keycode.h  mouse_event.h  mousecode.h
